--- a/app/src/part/footer.html
+++ b/app/src/part/footer.html
@@ -1,1 +1,4 @@
 <!-- Dependencies -->
+<script src="./pkgs/vue/vue.js"></script>
+<script src="./pkgs/zepto/zepto.js"></script>
+<!-- <script src="./pkgs/jquery/jquery.js"></script> -->
