--- a/app/src/part/head.html
+++ b/app/src/part/head.html
@@ -5,8 +5,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Your title">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" type="text/css" href="./pkgs/weui/dist/style/weui.css">
-	<!-- build:css css/index.css -->
+  <title>海棠晨报</title>
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
-  <!-- endbuild -->
+  <script src="./pkgs/vue/vue.js"></script>
+  <script src="./pkgs/zepto/zepto.js"></script>
+  <script src="./js/index.js"></script>
 </head>
