--- a/app/src/index.html
+++ b/app/src/index.html
@@ -8,10 +8,14 @@
 	<meta name="apple-mobile-web-app-title" content="Your title">
 	<meta name="format-detection" content="telephone=no">
 	<title>海棠晨报</title>
+	<!-- build:css css/index.css -->
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
-	<script src="./pkgs/vue/vue.js"></script>
-	<script src="./pkgs/zepto/zepto.js"></script>
+    <!-- endbuild -->
+	<script src="./pkgs/vue/vue.min.js"></script>
+	<script src="./pkgs/zepto/zepto.min.js"></script>
+	<!-- build:js js/index.js -->
 	<script src="./js/index.js"></script>
+	<!-- endbuild -->
 </head>
 <body id="mpaper" v-cloak>
 <div class="banner">
