早班车二期，webpack环境

--- a/mpaper/index.html
+++ b/mpaper/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="./pkgs/zepto/zepto.min.js"></script>
+    <script src="./pkgs/swiper/swiper-3.4.0.min.js"></script>
     <script src="/dist/build.js"></script>
   </body>
 </html>
